compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_missing_for_multiple.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1..2, 3..4 of int\nvar _ := a(1)"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), range of `int` (Unevaluated(LibraryId(0), BodyId(2)) .. Expr(Unevaluated(LibraryId(0), BodyId(3)), Yes)), ) of int
"_"@(FileId(1), 36..37) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 41..42: expected 2 arguments, found 1
| error in file FileId(1) for 41..42: subscript is missing 1 argument
