compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_err_wrong_binding.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type i : int\nvar a : array 1..2 of int\nvar _ : int := a(i)"

---
"i"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"a"@(FileId(1), 17..18) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"_"@(FileId(1), 43..44) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 56..57: cannot pass `i` to this parameter
| error in file FileId(1) for 56..57: `i` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `i` declared here
