compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_from_var_ref.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1..* of int := init(1)\na(1) := 1"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Unsized(1)), ) of int
"<root>"@(dummy) [Declared]: <error>

