compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_indexing_call_single_index.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1..2 of int\nvar _ : int := a(1)"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"_"@(FileId(1), 30..31) [Declared]: int
"<root>"@(dummy) [Declared]: <error>

