compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_dynamic_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var c : int\nvar _ : array 1 .. c of int"
---
"c"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"_"@(FileId(1), 16..17) [ConstVar(Var, No)]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Module(No)]: <error>

