compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_array_ty_init_less_one.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "var a : array 1..3 of int := init(1,2)"

---
"a"@(FileId(1), 4..5) [Declared]: array ( range of `int` (Unevaluated(LibraryId(0), BodyId(0)) .. Expr(Unevaluated(LibraryId(0), BodyId(1)), Yes)), ) of int
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 29..38: expected 3 elements, found 2
| error in file FileId(1) for 29..38: `init` list is missing 1 element
